# ViStreamASR

./: .gitignore  CONTRIBUTING.md  GAP_ANALYSIS.md  MANIFEST.in  README.md  example.py  pixi.toml  pyproj.toml  pyproject.toml  requirements.txt  setup.py  vistreamasr.toml
.github/workflows/: build-and-test.yml
docs/: ARCHITECTURE.md  COMPARISON_ANALYSIS.md  COMPONENT_CLI_INTERFACE_DOCS.md  COMPONENT_CONFIGURATION_DOCS.md  COMPONENT_CORE_PROCESSING_DOCS.md  COMPONENT_FFMPEG_MANAGER_DOCS.md  COMPONENT_LOGGING_DOCS.md  COMPONENT_OVERVIEW.md  COMPONENT_STREAMING_INTERFACE_DOCS.md  COMPONENT_VAD_INTEGRATION_DOCS.md  COMPONENT_WEB_INTERFACE_DOCS.md  GAP_ANALYSIS.md  PROJECT_GUIDE.md  REQUIREMENTS.md
scripts/: build_multiplatform.py
src/: __init__.py  cli.py  core.py
src/vistreamasr/: __init__.py  __main__.py  cli.py  config.py  core.py  ffmpeg_manager.py  logging.py  streaming.py  vad.py
src/vistreamasr/web/: server.py
src/vistreamasr/web/static/: client.js  index.html  style.css
tests/: test_ffmpeg_manager_diagnostics.py  test_microphone_vad.py  test_vad_integration.py
