[project]
name = "vistreamasr"
version = "0.1.4"
description = "Vietnamese Streaming Automatic Speech Recognition Library with Silero-VAD integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ViStreamASR Team"}
]
maintainers = [
    {name = "ViStreamASR Team"}
]
keywords = ["speech-recognition", "vietnamese", "streaming", "asr", "vad", "silero-vad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/nguyenvulebinh/ViStreamASR"
Repository = "https://github.com/nguyenvulebinh/ViStreamASR.git"
Documentation = "https://github.com/nguyenvulebinh/ViStreamASR#readme"
"Bug Tracker" = "https://github.com/nguyenvulebinh/ViStreamASR/issues"

[project.scripts]
vistream-asr = "vistreamasr.cli:cli_main"
vstreamasr = "vistreamasr.cli:cli_main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# --- Pixi Configuration ---
[tool.pixi.workspace]
authors = ["lkless <leakless21@gmail.com>"]
channels = ["conda-forge"]
name = "ViStreamASR"
platforms = ["linux-64"]
version = "0.1.0"

[tool.pixi.dependencies]
# Pixi will infer python from project.requires-python

[tool.pixi.pypi-dependencies]
librosa = ">=0.11.0, <0.12"
numba = ">=0.61.2, <0.62"
llvmlite = ">=0.44.0, <0.45"
numpy = ">=2.2.6, <3"
requests = ">=2.32.4, <3"
torch = ">=2.7.1, <3"
torchaudio = ">=2.7.1, <3"
silero-vad = ">=5.1.2, <6"
flashlight-text = ">=0.0.7, <0.0.8"
pydantic-settings = ">=2.0.0, <3"
loguru = ">=0.7.0, <1"
tomli = {version = ">=2.0.0, <3", python = "<3.11"}
tomli-w = ">=1.0.0, <2"

[tool.pixi.feature.dev.dependencies]
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
pytest = ">=8.4.1"
pytest-cov = ">=4.1.0"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest"
lint = "flake8 . && black . --check && isort . --check-only"
format = "black . && isort ."
build = "python -m build"

# --- Tool configurations ---
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vistreamasr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"